--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^5.0.35",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.5.3",
     "tailwindcss": "^4.1.5"
